Align the settings buttons correctly

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ button {
     /*display: block;*/
     font-size: 18px;
     font-weight: 800;
-    margin-right: auto;
-    margin-left: 114px;
+    /*margin-right: auto;
+    margin-left: auto;*/
 }
 
 .button-container {
@@ -57,6 +57,15 @@ body {
 }
 
 .floating-point {
-    
+    margin: 0;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    /*margin-right: auto;
+    margin-left: auto;*/
+    justify-content: center;
+}
+
+.settings-container {
+    display: flex;
     justify-content: center;
 }
